# LoCo

./: CMakeLists.txt  LoCo.cpp  README.md  history.hpp
backend/: build_mdd.cpp  freq_miner.cpp  seq2pat.cpp  seq2pat.hpp
renderStory/: CMakeLists.txt  main.cpp  merge.sh
testdata/: createTestData01.py
